--- a/lib/loadable-components/package.json
+++ b/lib/loadable-components/package.json
@@ -1,63 +1,62 @@
 {
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "bundlesize": [
-    {
-      "path": "./packages/component/dist/loadable.min.js",
-      "maxSize": "2.5 kB"
+    "private": true,
+    "workspaces": [
+        "packages/*"
+    ],
+    "bundlesize": [{
+            "path": "./packages/component/dist/loadable.min.js",
+            "maxSize": "2.5 kB"
+        },
+        {
+            "path": "./packages/component/dist/loadable.esm.js",
+            "maxSize": "3.5 kB"
+        }
+    ],
+    "scripts": {
+        "build": "lerna run build",
+        "ci": "yarn build && yarn lint && yarn test --ci && bundlesize",
+        "dev": "WATCH_MODE=true lerna run build --parallel -- --watch",
+        "format": "prettier --write \"**/*.{js,json,md}\"",
+        "lint": "eslint .",
+        "release": "lerna publish --conventional-commits && conventional-github-releaser --preset angular",
+        "test": "jest"
     },
-    {
-      "path": "./packages/component/dist/loadable.esm.js",
-      "maxSize": "3.5 kB"
+    "devDependencies": {
+        "@babel/cli": "^7.4.4",
+        "@babel/core": "^7.4.4",
+        "@babel/node": "^7.2.2",
+        "@babel/plugin-proposal-class-properties": "^7.4.4",
+        "@babel/plugin-transform-runtime": "^7.4.4",
+        "@babel/preset-env": "^7.4.4",
+        "@babel/preset-react": "^7.0.0",
+        "@testing-library/react": "^8.0.1",
+        "babel-core": "^7.0.0-bridge.0",
+        "babel-eslint": "^10.0.1",
+        "babel-jest": "^24.8.0",
+        "babel-plugin-annotate-pure-calls": "^0.4.0",
+        "bundlesize": "^0.17.1",
+        "conventional-github-releaser": "^3.1.2",
+        "cross-env": "^5.2.0",
+        "eslint": "^5.16.0",
+        "eslint-config-airbnb": "^17.1.0",
+        "eslint-config-prettier": "^4.2.0",
+        "eslint-plugin-import": "^2.17.2",
+        "eslint-plugin-jsx-a11y": "^6.2.1",
+        "eslint-plugin-react": "^7.13.0",
+        "jest": "^24.8.0",
+        "jest-dom": "^3.2.2",
+        "lerna": "^3.13.4",
+        "prettier": "^1.17.0",
+        "react": "^16.8.6",
+        "react-dom": "^16.8.6",
+        "regenerator-runtime": "^0.13.2",
+        "rollup": "^1.11.3",
+        "rollup-plugin-babel": "^4.3.2",
+        "rollup-plugin-commonjs": "^10.0.0",
+        "rollup-plugin-node-resolve": "^5.0.1",
+        "rollup-plugin-replace": "^2.2.0",
+        "rollup-plugin-size-snapshot": "^0.9.0",
+        "rollup-plugin-terser": "^5.0.0",
+        "shx": "^0.3.2"
     }
-  ],
-  "scripts": {
-    "build": "lerna run build",
-    "ci": "yarn build && yarn lint && yarn test --ci && bundlesize",
-    "dev": "WATCH_MODE=true lerna run build --parallel -- --watch",
-    "format": "prettier --write \"**/*.{js,json,md}\"",
-    "lint": "eslint .",
-    "release": "lerna publish --conventional-commits && conventional-github-releaser --preset angular",
-    "test": "jest"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.4.4",
-    "@babel/core": "^7.4.4",
-    "@babel/node": "^7.2.2",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-transform-runtime": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
-    "@babel/preset-react": "^7.0.0",
-    "@testing-library/react": "^8.0.1",
-    "babel-core": "^7.0.0-bridge.0",
-    "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.8.0",
-    "babel-plugin-annotate-pure-calls": "^0.4.0",
-    "bundlesize": "^0.17.1",
-    "conventional-github-releaser": "^3.1.2",
-    "cross-env": "^5.2.0",
-    "eslint": "^5.16.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-config-prettier": "^4.2.0",
-    "eslint-plugin-import": "^2.17.2",
-    "eslint-plugin-jsx-a11y": "^6.2.1",
-    "eslint-plugin-react": "^7.13.0",
-    "jest": "^24.8.0",
-    "jest-dom": "^3.2.2",
-    "lerna": "^3.13.4",
-    "prettier": "^1.17.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "regenerator-runtime": "^0.13.2",
-    "rollup": "^1.11.3",
-    "rollup-plugin-babel": "^4.3.2",
-    "rollup-plugin-commonjs": "^10.0.0",
-    "rollup-plugin-node-resolve": "^5.0.1",
-    "rollup-plugin-replace": "^2.2.0",
-    "rollup-plugin-size-snapshot": "^0.9.0",
-    "rollup-plugin-terser": "^5.0.0",
-    "shx": "^0.3.2"
-  }
 }
